Spacing fix.

--- a/src/ututi/public/localstyle.css
+++ b/src/ututi/public/localstyle.css
@@ -24,7 +24,7 @@ table.group-type-choice tr.group-type th img {
 
 table.group-type-choice tr.group-type th h2 {
     margin-top: -25px;
-    margin-left: 40px;
+    margin-left: 45px;
 }
 
 table.group-type-choice tr.features td {
